--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,6 +30,8 @@ spring.thymeleaf.encoding=UTF-8
 spring.thymeleaf.content-type=text/html
 spring.thymeleaf.mode=HTML5
 
+spring.mvc.favicon.enabled = false
+
 ##  Config Log
 logging.level.org.springframework.web=DEBUG
 logging.level.org.hibernate=ERROR
