--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -45,7 +45,9 @@ dict.logs.type=logs_type
 dict.logs.level=logs_level
 
 
-
+## Config System Default Picture ID
+system.default.picture.id=3af2fcfbb2ab42bd91ed6e24afcb0392
+system.default.picture.path=upload/files/
 
 
 
