--- a/pom.xml
+++ b/pom.xml
@@ -43,10 +43,10 @@
 		</dependency>
 
 		<!-- SpringBoot Security依赖 -->
-		<!--<dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
-		</dependency>-->
+		</dependency>
 
 		<!-- SpringBoot Thymeleaf依赖 -->
 		<dependency>
@@ -60,8 +60,6 @@
 			<artifactId>spring-boot-devtools</artifactId>
 			<optional>true</optional>
 		</dependency>
-
-
 
 		<!-- SpringBoot Web依赖 -->
 		<dependency>
