--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,6 +16,8 @@ spring.jpa.show-sql=true
 ##  Config Port
 server.port=8989
 
+security.basic.enabled=false
+
 ##  Config AOP
 spring.aop.auto=true
 
